<resources>
    <string name="app_name">SetoStory</string>
    <string name="logo_image">logo image</string>
    <string name="action_settings">Settings</string>

    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">LOGIN</string>
    <string name="tv_regist">Didn\'t have an account yet? Sign Up!</string>
    <string name="or">OR</string>
    <string name="register">REGISTER</string>
    <string name="tv_signin">Already have an account? Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_lower">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name">User Name</string>
    <string name="nama">Name</string>
    <string name="user_id">user_id</string>
    <string name="logout">Logout</string>
    <string name="add_story">+ Add Story</string>
    <string name="description">Description</string>
    <string name="camera">Cam</string>
    <string name="gallery">File</string>
    <string name="upload">upload</string>
    <string name="preview">preview</string>
    <string name="imageview_for_user_avatar">imageview for user avatar</string>
    <string name="imageview_for_content_image">imageview for content image</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

</resources>