<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:background="@drawable/gradient_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.065" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guide3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.348" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guide4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.69" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guide5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.69" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guide6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guide7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.87" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guide8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.645" />

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/logo_image"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@id/login_guide2"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/login_guide1"/>

    <TextView
        android:id="@+id/login_signin_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAppearance="@style/sign_in"
        app:layout_constraintBottom_toTopOf="@+id/login_guide3"
        app:layout_constraintEnd_toEndOf="@+id/login_logo"
        app:layout_constraintStart_toStartOf="@+id/login_logo"
        app:layout_constraintTop_toBottomOf="@id/login_guide2" />

    <View
        android:id="@+id/container_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:alpha="0.5"
        android:background="@drawable/container_login"
        app:layout_constraintBottom_toBottomOf="@id/login_guide4"
        app:layout_constraintDimensionRatio="1.46:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_guide3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_edttxtlay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/container_login"
        app:layout_constraintStart_toStartOf="@+id/container_login"
        app:layout_constraintTop_toTopOf="@+id/container_login"
        app:layout_constraintBottom_toTopOf="@id/login_pass_edttxtlay"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email_edttext"
            android:layout_width="match_parent"
            android:textAppearance="@style/text_input"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_pass_edttxtlay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:alpha="0.7"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/login_email_edttxtlay"
        app:layout_constraintStart_toStartOf="@+id/login_email_edttxtlay"
        app:layout_constraintTop_toBottomOf="@id/login_email_edttxtlay"
        app:layout_constraintBottom_toTopOf="@id/login_forgetpass_txt"
        app:passwordToggleTint="@color/black"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/black">

        <com.e.setostory2.utils.ConcealEditText
            android:id="@+id/login_pass_edttxt"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:textAppearance="@style/text_input"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/login_forgetpass_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/opensans_italic"
        android:text="@string/forget_password"
        app:layout_constraintBottom_toBottomOf="@id/login_guide8"
        app:layout_constraintStart_toStartOf="@+id/login_pass_edttxtlay"
        app:layout_constraintTop_toBottomOf="@+id/login_pass_edttxtlay" />

    <Button
        android:id="@+id/login_btn"
        style="@style/button_signinup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/container_login"
        app:layout_constraintStart_toStartOf="@+id/container_login"
        app:layout_constraintTop_toBottomOf="@+id/container_login" />

    <TextView
        android:id="@+id/login_gotoregis_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/tv_regist"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/login_btn"
        app:layout_constraintStart_toStartOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@id/login_guide6" />

</androidx.constraintlayout.widget.ConstraintLayout>